--- a/Labushava/lab1.ipynb
+++ b/Labushava/lab1.ipynb
@@ -3,6 +3,16 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": [
+    "## Лабушева Юлиана Алексеевна\n",
+    "### 8 группа, ТВиМС\n",
+    "### Отчет по лабораторной работе 1"
+   ],
+   "id": "5637bc4a8dc4587"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "### 1.Расчет описательных статистик",
    "id": "3b50a64bd7108094"
   },
@@ -43,16 +53,16 @@
     "            \"min\" : min(file1[col]),\n",
     "            \"max\" : max(file1[col]),\n",
     "            \"dimension\": max(file1[col]) - min(file1[col]),\n",
-    "            \"mean\":f1(file1[col]),\n",
+    "            \"mean\":f1(file1[col]),  #мат ожидание\n",
     "            \"var\":D(file1[col]),\n",
     "            \"std\":D(file1[col])**0.5,\n",
     "            \"q 0.01\": file1[col].quantile(0.01),\n",
     "            \"q 0.05\": file1[col].quantile(0.05),\n",
-    "            \"medium\": file1[col].quantile(0.5),\n",
+    "            \"medium\": file1[col].quantile(0.5), #медиана\n",
     "            \"q 0.95\": file1[col].quantile(0.95),\n",
     "            \"q 0.99\": file1[col].quantile(0.99),\n",
-    "            \"skewness\": file1[col].skew(),\n",
-    "            \"kurtosis\": file1[col].kurt(),\n",
+    "            \"skewness\": file1[col].skew(), #ассиметрия\n",
+    "            \"kurtosis\": file1[col].kurt(),  #эксцесс\n",
     "        }\n",
     "    )\n",
     "table = pd.DataFrame(min_result)\n",
@@ -1210,6 +1220,12 @@
    "id": "3dbdb2ad81c0c5b3"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Создание корреляционной матрицы",
+   "id": "38c024fe12b9206a"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-10-13T12:36:44.489156Z",
@@ -1914,7 +1930,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Найдем сильнокреелирующие пары",
+   "source": "Найдем сильнокреелирующие пары (значение > 0.5)",
    "id": "7be22cecd386ebe1"
   },
   {
