--- a/dobricki/task1.ipynb
+++ b/dobricki/task1.ipynb
@@ -3,6 +3,64 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": [
+    "<div align=\"center\">\n",
+    "  <h1>Лабораторная работа №1</h1>\n",
+    "</div>"
+   ],
+   "id": "39c21acb11f6122e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "<div align=\"center\">\n",
+    "  <h2>Отчет о выполнении</h2>\n",
+    "</div>"
+   ],
+   "id": "5c9006303bc80b3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "<div align=\"right\">\n",
+    "  <h3>Студента 3 курса 8 группы</h3>\n",
+    "  <h3>Добрицкого Артема</h3>\n",
+    "</div>"
+   ],
+   "id": "c681b0b84297beca"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "<div align=\"center\">\n",
+    "  <h2>Содержание</h2>\n",
+    "</div>"
+   ],
+   "id": "82e2e0edd0f066b6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "**Расчет описательных характеристик**\n",
+    "   1. Минимум,максимум,размах\n",
+    "   2. Среднее,дисперсия,стандартное отклонение\n",
+    "   3. Медиана,квантили\n",
+    "\n",
+    "**Визуализация распределений**\n",
+    "   1. Столбчатая диаграмма\n",
+    "   2. BoxPlot\n",
+    "\n",
+    "**Кореляционный анализ**"
+   ],
+   "id": "c12e2f9b9a945939"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "### Расчет описательных статистик",
    "id": "5bb43682c64918cc"
   },
@@ -2477,7 +2535,7 @@
    "cell_type": "markdown",
    "source": [
     "*Таблица сильнокоррелирующих пар*\n",
-    "Теперь надо проверить статистическую значимость этиъ пар"
+    "Теперь надо проверить статистическую значимость этих пар"
    ],
    "id": "e3bf604d6718aa95"
   },
