--- a/Labushava/lab1.ipynb
+++ b/Labushava/lab1.ipynb
@@ -13,6 +13,22 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": [
+    "<div align=\"center\">\n",
+    "  <h2>Содержание</h2>\n",
+    "</div>\n",
+    "\n",
+    "Расчет описательных характеристик\n",
+    "\n",
+    "Визуализация распределений\n",
+    "\n",
+    "Корреляционный анализ\n"
+   ],
+   "id": "438072b0c86a1e3d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "### 1.Расчет описательных статистик",
    "id": "3b50a64bd7108094"
   },
