--- a/Zaretski/lab1.ipynb
+++ b/Zaretski/lab1.ipynb
@@ -5,11 +5,63 @@
    "id": "826f87b0",
    "metadata": {},
    "source": [
-    "# АДЭФС. Лабораторная работа №1\n",
+    "<div align=\"center\">\n",
+    "  <h1>АДЭФС. Лабораторная работа №1</h1>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00cfe194",
+   "metadata": {},
+   "source": [
+    "<div align=\"right\">\n",
+    "  <h3>Студента 3 курса 8 группы</h3>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dd626f3",
+   "metadata": {},
+   "source": [
+    "<div align=\"right\">\n",
+    "  <h3>Зарецкого A.O.</h3>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4076474d",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "  <h2>Отчет о выполнении</h2>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b6faeb9",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "  <h2>Содержание</h2>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e43dde6f",
+   "metadata": {},
+   "source": [
+    "Описание набора данных\n",
     "\n",
-    "**Формат:** Jupyter notebook\n",
+    "Расчет описательных характеристик\n",
     "\n",
-    "Краткое содержание: расчет описательных статистик, визуализация распределений, корреляционный анализ.\n"
+    "Визуализация распределений\n",
+    "\n",
+    "Корреляционный анализ"
    ]
   },
   {
@@ -24,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "fe767533",
    "metadata": {},
    "outputs": [
@@ -56,7 +108,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,10 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f51ab5f0",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['empl_num', 'k1', 'k2', 'k3', 'k4', 'k5', 'k6', 'k7', 'k8', 'k9', 'k10', 'k11', 'k12', 'k13', 'k14', 'k15', 'k16', 'k17', 'k18', 'k19', 'k20', 'year']\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -509,14 +568,26 @@
        "year         11.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "num_cols = df.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "print(num_cols)\n",
     "res = pd.DataFrame(index=num_cols, columns=['min','max','range','mean','var','std','median','q0.01','q0.05','q0.95','q0.99'])\n",
     "for c in num_cols:\n",
     "    s = df[c].dropna()\n",
