--- a/Zaretski/lab2.ipynb
+++ b/Zaretski/lab2.ipynb
@@ -5,11 +5,35 @@
    "id": "6377154a005d91a2",
    "metadata": {},
    "source": [
-    "# АДЭФС. Лабораторная работа №2\n",
+    "<div align=\"center\">\n",
+    "  <h1>АДЭФС. Лабораторная работа №1</h1>\n",
+    "</div>\n",
+    "<div align=\"right\">\n",
+    "  <h3>Студента 3 курса 8 группы</h3>\n",
+    "</div>\n",
+    "<div align=\"right\">\n",
+    "  <h3>Зарецкого A.O.</h3>\n",
+    "</div>\n",
+    "<div align=\"center\">\n",
+    "  <h2>Отчет о выполнении</h2>\n",
+    "</div>\n",
+    "<div align=\"center\">\n",
+    "  <h2>Содержание</h2>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bd3adc2",
+   "metadata": {},
+   "source": [
+    "Описание набора данных\n",
     "\n",
-    "**Формат:** Jupyter notebook\n",
+    "Тест сферичности Бартлетта. КМО критерий\n",
     "\n",
-    "Краткое содержание: анализ главных компонент, факторный анализ с вращением, интерпретация факторов."
+    "Анализ главных компонент\n",
+    "\n",
+    "Факторный анализ с вращением"
    ]
   },
   {
@@ -1093,6 +1117,17 @@
     "})\n",
     "\n",
     "display(variance_summary.round(5))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e32d89f",
+   "metadata": {},
+   "source": [
+    "# Общий вывод\n",
+    " Проведенный факторный анализ успешно сократил 22 исходные переменные до 8 ключевых факторов, которые объясняют 75.11% общей дисперсии данных. Анализ показал хорошую применимость метода (KMO = 0.748) и статистически значимые корреляции между переменными.\n",
+    "\n",
+    "Вращение Varimax позволило выделить интерпретируемые факторы, характеризующие различные аспекты деятельности организаций: производственную эффективность, финансовые показатели, ресурсоемкость, операционную деятельность и другие. Полученная факторная структура может быть использована для дальнейшего анализа данных и построения прогнозных моделей."
    ]
   }
  ],
